--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -48,4 +49,211 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px; 
+  grid-template-areas: "result content__details";
+  align-items: end;
+  margin: auto;
+  width: 1140px;
+  gap: 30px;
+  align-items: flex-end;
+}
+
+.result {
+  grid-area: result;  
+}
+
+.content__details {
+  display: grid;
+  gap: 26px;
+  grid-area: content__details;
+  height: 100%;
+  width: 100%;
+}
+
+.search-form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* gap: 6px; */
+}
+
+.content__list-container {
+  height: 298px;
+  overflow: scroll;
+}
+
+.result__video-container {
+  height: 386px;
+  width: 711px;
+  margin-bottom: 25px;
+  object-fit: cover;
+}
+
+.result__video {
+  object-fit: cover;
+  height: 386px;
+  width: 100%;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+  /* gap: 6px; */
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  gap: 2px;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: 'Fira Sans Condensed';
+}
+
+.title {
+  font-family: 'Oswald';
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: rgba(84, 80, 80, 1);
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: white;
+}
+
+.content__video-card-title {
+  font-family: Oswald;
+  /* font-weight: 700; */
+  font-size: 30px;
+  line-height: 100%;
+  /* letter-spacing: 0; */
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: 'Fira Sans Condensed';
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  /* letter-spacing: 0; */
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  font-family: Fira Sans Condensed;
+  /* font-weight: 400; */
+  /* font-size: 18px; */
+  line-height: 100%;
+  /* letter-spacing: 0; */
+  gap: 5px;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.search-form__textfield {
+  font-family: Fira Sans Condensed;
+  /* font-weight: 400; */
+  font-size: 18px;
+  /* line-height: 100%; */
+  /* letter-spacing: 0; */
+  /* line-height: 22px; */
+  font-style: normal;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 1);
+  border: none;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  appearance: none;
+  width: 225px;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: none;
+  border: 1px solid white;
+}
+
+/* .search-form__pseudo-checkbox {
+  border: 1px solid rgba(255, 255, 255, 1)
+} */
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  background: #fff;
+  height: 15px;
+  width: 15px;
 }
