--- a/styles/style.css
+++ b/styles/style.css
@@ -55,11 +55,12 @@ ol {
   display: grid;
   grid-template-columns: 711px 399px; 
   grid-template-areas: "result content__details";
-  align-items: end;
+  align-items: flex-end;
   margin: auto;
   width: 1140px;
   gap: 30px;
-  align-items: flex-end;
+  /* align-self: center; */
+
 }
 
 .result {
@@ -78,25 +79,31 @@ ol {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  /* gap: 6px; */
+  padding-bottom: 4px;
 }
 
 .content__list-container {
   height: 298px;
   overflow: scroll;
+  position: relative;
 }
 
 .result__video-container {
   height: 386px;
   width: 711px;
-  margin-bottom: 25px;
+  /* было так - margin-bottom: 22px; стало так */
+  margin-block-end: 16px;
   object-fit: cover;
+  position: relative;
 }
 
 .result__video {
   object-fit: cover;
   height: 386px;
   width: 100%;
+  /* object-position: center; */
+  /* inline-size: 100%;
+  block-size: 100%; */
 }
 
 .content__list {
@@ -104,6 +111,7 @@ ol {
   flex-direction: column;
   gap: 30px;
 }
+
 
 .content__video-card {
   display: flex;
@@ -146,8 +154,13 @@ ol {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: white;
+}
+
+.content__card-link_current {
+  background: rgba(84, 80, 80, 1);
 }
 
 .content__video-card-title {
@@ -193,12 +206,14 @@ fieldset {
 .search-form__label {
   display: flex;
   width: fit-content;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed';
+  
   /* font-weight: 400; */
   /* font-size: 18px; */
   line-height: 100%;
   /* letter-spacing: 0; */
   gap: 5px;
+  cursor: pointer;
 }
 
 .search-form__fieldset {
@@ -224,18 +239,34 @@ fieldset {
   width: 225px;
 }
 
-.search-form__textfield:focus {
+.button:focus,
+.search-form__textfield:focus, 
+.search-form__checkbox:focus,
+.content__card-link:focus  {
   outline: none;
 }
 
-.search-form__label:has(:focus-visible) {
-  outline: none;
-  border: 1px solid white;
+.content__list-item {
+  padding-right: 3px;
+  padding-left: 3px;
 }
 
-/* .search-form__pseudo-checkbox {
-  border: 1px solid rgba(255, 255, 255, 1)
-} */
+.button:focus-visible,
+.search-form__label:has(:focus-visible),
+.search-form__checkbox:has(:focus-visible),
+.content__card-link:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+
+
+.search-form__label-text:active,
+.search-form__textfield:active,
+.search-form__label:active {
+  border: none;
+  text-decoration: none;
+}
 
 .search-form__checkbox-list {
   display: flex;
@@ -257,3 +288,68 @@ fieldset {
   height: 15px;
   width: 15px;
 }
+
+.search-form__pseudo-checkbox:active {
+  /* width: 17px;
+  height: 17px;
+  background: #fff;
+  border: 1px solid #1b1919;
+  outline: 1px solid #fff; */
+  /* надо настроить чтобы при active был белый фон, но не скакал */
+}
+
+.search-form__label:active .search-form__label-text {
+  text-decoration: none;
+  background-color: none;
+}
+
+.button {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  font-family: 'Fira Sans Condensed';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+  cursor: pointer;
+  height: 34px;
+}
+
+.search-form__submit-button {
+  /* font-family: Fira Sans Condensed; */
+  /* letter-spacing: 0; */
+  align-self: flex-end;
+  min-width: 194px;
+}
+
+.more-button {
+  /* font-family: Fira Sans Condensed; */
+  /* letter-spacing: 0; */
+  text-align: center;
+  width: 100%;
+}
+
+button:hover,
+.search-form__submit-button:hover,
+.more-button:hover,
+.content__card-link:hover,
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.search-form__submit-button:active,
+.more-button:active,
+.content__video-card:active,
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+  text-decoration: none;
+  outline: none;
+}
+
+
+
+
+
+
