--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -48,22 +48,21 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .content {
   display: grid;
-  grid-template-columns: 711px 399px; 
+  grid-template-columns: 711px 399px;
   grid-template-areas: "result content__details";
   align-items: flex-end;
   margin: auto;
   width: 1140px;
   gap: 30px;
-
 }
 
 .result {
-  grid-area: result;  
+  grid-area: result;
 }
 
 .content__details {
@@ -105,7 +104,7 @@ ol {
 .content__list {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  /* gap: 30px; */
 }
 
 .content__video-card {
@@ -135,11 +134,11 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
 }
 
 .title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', 'Arial', 'Helvetica', sans-serif;
   font-size: 75px;
   line-height: 94%;
   text-transform: uppercase;
@@ -160,7 +159,7 @@ ol {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: 'Oswald', 'Arial', 'Helvetica', sans-serif;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
@@ -170,7 +169,7 @@ ol {
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
@@ -202,7 +201,7 @@ fieldset {
 .search-form__label {
   display: flex;
   width: fit-content;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
   line-height: 100%;
   gap: 5px;
   cursor: pointer;
@@ -215,7 +214,7 @@ fieldset {
 }
 
 .search-form__textfield {
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
   font-size: 18px;
   font-style: normal;
   background-color: transparent;
@@ -228,9 +227,9 @@ fieldset {
 }
 
 .button:focus,
-.search-form__textfield:focus, 
+.search-form__textfield:focus,
 .search-form__checkbox:focus,
-.content__card-link:focus  {
+.content__card-link:focus {
   outline: none;
 }
 
@@ -269,14 +268,14 @@ fieldset {
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: '';
+  content: "";
   background: #fff;
   height: 15px;
   width: 15px;
 }
 
 .search-form__pseudo-checkbox:active::after {
-  content: '';
+  content: "";
   width: 15px;
   height: 15px;
   background-color: #fff;
@@ -292,7 +291,7 @@ fieldset {
   background-color: transparent;
   border: 1px solid white;
   color: white;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', 'Arial', 'Helvetica', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 100%;
@@ -332,4 +331,3 @@ button:hover,
 .search-form__label:active .search-form__label-text {
   text-decoration: none;
 }
-
